feat: 添加管理员仪表盘，更新导航和用户角色处理逻辑